--- a/GabosNationalNode.Api/Properties/launchSettings.json
+++ b/GabosNationalNode.Api/Properties/launchSettings.json
@@ -15,21 +15,17 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "GabosNationalNode.Api": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": "true",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
-    },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true,
       "useSSL": true
+    },
+    "WebApi.Api": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:5000;https://localhost:5001"
     }
   }
 }
